--- a/public/css/admin/user-student.css
+++ b/public/css/admin/user-student.css
@@ -41,6 +41,9 @@ body {
   width: auto;
   height: 25px;
 }
+.menuList a {
+  color: var(--black);
+}
 .menu {
   font-size: 14px;
   font-weight: 400;
@@ -57,13 +60,12 @@ body {
 .main-content {
   padding: 20px !important;
 }
-.userCard {
+.studentList {
   color: var(--blue);
   min-height: 250px;
   background-color: var(--white);
   border-radius: 6px;
   box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
-  cursor: pointer;
 }
 .headline {
   color: var(--white);
@@ -80,25 +82,6 @@ body {
   height: 28px;
   filter: invert(100%);
 }
-.countUser {
-  min-height: 57%;
-}
-.countUser img {
-  width: 180px;
-  height: 150px;
-}
-.countUser h4 {
-  font-size: 18px;
-  font-weight: 600;
-}
-.userCard hr {
-  color: var(--grey);
-}
-.detailCard h6 {
-  font-size: 12px;
-  font-weight: 300;
-  color: var(--black);
-}
 
 
 .footer {
@@ -114,29 +97,9 @@ body {
 }
 
 @media (max-width: 992px) {
-  .menuList img {
-    width: 20px;
-    height: 20px;
-  }
-  .menu {
-    font-size: 12px;
-    font-weight: 400;
-  }
-  .content h4 {
-    font-size: 16px;
-  }
-  .countUser {
-    min-height: 60%;
-  }
-  .countUser img {
-    height: 120px;
-  }
 }
 
 @media (max-width: 768px) {
-  .countUser img {
-    height: 140px;
-  }
   .footer p {
     font-size: 10px;
   }
