--- a/public/css/admin/dashboard.css
+++ b/public/css/admin/dashboard.css
@@ -30,11 +30,11 @@ body {
 }
 .head-content img {
   width: auto;
-  height: 20px;
+  height: 16px;
 }
 .head-content h6 {
   color: var(--grey);
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
 }
 .menuList img {
@@ -134,6 +134,9 @@ body {
 }
 
 @media (max-width: 768px) {
+  .head h4 {
+    font-size: 18px;
+  }
   .countUser img {
     height: 140px;
   }
