--- a/public/css/admin/user-student.css
+++ b/public/css/admin/user-student.css
@@ -30,11 +30,11 @@ body {
 }
 .head-content img {
   width: auto;
-  height: 20px;
+  height: 16px;
 }
 .head-content h6 {
   color: var(--grey);
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
 }
 .menuList img {
@@ -100,6 +100,9 @@ body {
 }
 
 @media (max-width: 768px) {
+  .head h4 {
+    font-size: 18px;
+  }
   .footer p {
     font-size: 10px;
   }
