--- a/public/css/admin/user-student.css
+++ b/public/css/admin/user-student.css
@@ -62,14 +62,14 @@ body {
 }
 .studentList {
   color: var(--blue);
-  min-height: 250px;
+  min-height: 450px;
   background-color: var(--white);
   border-radius: 6px;
   box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
 }
 .headline {
   color: var(--white);
-  padding: 24px !important;
+  padding: 20px 24px !important;
   background-color: var(--blue);
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
@@ -79,10 +79,26 @@ body {
 }
 .headline img {
   width: auto;
-  height: 28px;
+  height: 25px;
   filter: invert(100%);
 }
+.headline input.inputField {
+  font-size: 12px;
+  padding: 20px;
+}
 
+.table thead {
+  background-color: #F9FAFC;
+  text-transform: uppercase;
+}
+.table tr {
+  color: rgba(58, 53, 65, 0.87);
+  font-size: 11px;
+}
+.table th,
+.table td {
+  padding: 16px 0 !important;
+}
 
 .footer {
   color: var(--white);
@@ -100,6 +116,12 @@ body {
 }
 
 @media (max-width: 768px) {
+  .main {
+    min-height: 850px;
+  }
+  .main-content {
+    padding: 10px !important;
+  }
   .head h4 {
     font-size: 18px;
   }
