--- a/public/css/admin/user-student.css
+++ b/public/css/admin/user-student.css
@@ -95,9 +95,13 @@ body {
   color: rgba(58, 53, 65, 0.87);
   font-size: 11px;
 }
+.table tbody tr:hover {
+  background-color: rgba(234, 234, 234, 0.4);
+  cursor: pointer;
+}
 .table th,
 .table td {
-  padding: 16px 0 !important;
+  padding: 16px 8px !important;
 }
 
 .footer {
@@ -125,6 +129,19 @@ body {
   .head h4 {
     font-size: 18px;
   }
+  .headline img {
+    height: 18px;
+  }
+  .headline input.inputField {
+    font-size: 10px;
+    padding: 15px;
+  }
+
+  /* Table */
+  .table tr {
+    font-size: 8px;
+  }
+  
   .footer p {
     font-size: 10px;
   }
