--- a/public/css/admin/essay-completed-detail.css
+++ b/public/css/admin/essay-completed-detail.css
@@ -69,9 +69,9 @@ body {
 .main-content {
   padding: 20px !important;
 }
-.profile {
+/* .profile {
   height: fit-content !important;
-}
+} */
 .userCard {
   color: var(--blue);
   /* min-height: 250px; */
@@ -92,7 +92,7 @@ body {
 }
 .headline {
   color: var(--white);
-  padding: 24px !important;
+  padding: 20px 24px !important;
   background-color: var(--blue);
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
@@ -102,8 +102,79 @@ body {
 }
 .headline img {
   width: auto;
-  height: 28px;
+  height: 26px;
   filter: invert(100%);
+}
+.headline input.inputField {
+  font-size: 12px;
+  padding: 15px;
+}
+img.img-status {
+  width: auto;
+  height: 42px;
+}
+img.img-word {
+  width: auto;
+  height: 62px;
+}
+.btn-download, .btn-download:hover {
+  color: var(--white);
+  background-color: var(--green);
+  border: 0;
+  padding: 8px 16px !important;
+}
+.btn-download h6 {
+  font-size: 12px;
+  font-weight: 400;
+}
+.btn-download img {
+  width: auto;
+  height: 18px;
+  filter: invert(100%);
+}
+.countEssay img {
+  width: 180px;
+  height: 150px;
+}
+.countEssay h4 {
+  font-size: 18px;
+  font-weight: 600;
+}
+.countEssay .fa-star {
+  color: var(--light-grey);
+  font-size: 24px;
+}
+.countEssay .checked {
+  color: var(--yellow);
+}
+.essayList {
+  color: var(--blue);
+  /* min-height: 450px; */
+  background-color: var(--white);
+  border-radius: 6px;
+  box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
+}
+.essayList * {
+  padding: 0;
+  margin: 0;
+}
+.table thead {
+  background-color: #F9FAFC;
+  text-transform: uppercase;
+}
+.table tr {
+  color: rgba(58, 53, 65, 0.87);
+  font-size: 11px;
+}
+.table tbody tr:hover {
+  background-color: rgba(234, 234, 234, 0.4);
+  cursor: pointer;
+}
+.table th,
+.table td {
+  padding: 14px 8px !important;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .profile-editor {
@@ -125,21 +196,6 @@ body {
   border-radius: 6px;
 }
 
-.dropdown button, .dropdown ul {
-  width: 96%;
-  padding: 5px 15px !important;
-  font-size: 12px;
-  font-family: var(--font-poppins);
-}
-.dropdown-toggle, .dropdown-toggle:focus, .dropdown-toggle:hover {
-  border: 1px solid var(--light-grey);
-}
-.dropdown p {
-  width: 95%;
-}
-.dropdown input.inputField {
-  font-size: 12px;
-}
 .btn-create, .btn-create:hover {
   color: var(--white);
   background-color: var(--blue);
@@ -148,7 +204,7 @@ body {
 }
 .btn-create img {
   width: auto;
-  height: 24px;
+  height: 18px;
   filter: invert(100%);
 }
 
@@ -190,9 +246,27 @@ body {
   .head h4 {
     font-size: 18px;
   }
+  .headline img {
+    width: auto;
+    height: 24px;
+  }
   .userCard .pic-profile {
     width: 45%;
     height: auto;
+  }
+  .headline input.inputField {
+    font-size: 10px;
+    padding: 15px;
+  }
+  .countEssay h4 {
+    font-size: 14px;
+  }
+  .essayList h6 {
+    font-size: 12px;
+  }
+  /* Table */
+  .table tr {
+    font-size: 8px;
   }
   .btn-create, .btn-create:hover {
     padding: 6px 12px !important;
