--- a/public/css/admin/user-editor-invite.css
+++ b/public/css/admin/user-editor-invite.css
@@ -69,30 +69,20 @@ body {
 .main-content {
   padding: 20px !important;
 }
-.profile {
-  height: fit-content !important;
-}
-.userCard {
+.invite-card {
   color: var(--blue);
-  /* min-height: 250px; */
+  /* min-height: 280px; */
   background-color: var(--white);
   border-radius: 6px;
   box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
-  /* cursor: pointer; */
 }
-.userCard * {
-  /* padding: 0; */
+.invite-card * {
+  padding: 0;
   margin: 0;
-}
-.userCard .pic-profile {
-  width: 50%;
-  height: auto;
-  border: 1px solid var(--light-grey);
-  border-radius: 50%;
 }
 .headline {
   color: var(--white);
-  padding: 24px !important;
+  padding: 20px 24px !important;
   background-color: var(--blue);
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
@@ -102,43 +92,20 @@ body {
 }
 .headline img {
   width: auto;
-  height: 28px;
+  height: 25px;
   filter: invert(100%);
 }
-
-.profile-editor {
+.field-content {
   color: var(--black);
 }
-.profile-editor h6 {
+.field-content h6 {
   font-size: 12px;
   font-weight: 400;
 }
-.profile-editor .inputField {
-  width: 93%;
+.field-content .inputField {
+  width: 100%;
   font-size: 12px;
   border-radius: 6px;
-}
-.profile-editor textarea {
-  width: 96%;
-  height: 120px;
-  border-color: var(--light-grey);
-  border-radius: 6px;
-}
-
-.dropdown button, .dropdown ul {
-  width: 96%;
-  padding: 5px 15px !important;
-  font-size: 12px;
-  font-family: var(--font-poppins);
-}
-.dropdown-toggle, .dropdown-toggle:focus, .dropdown-toggle:hover {
-  border: 1px solid var(--light-grey);
-}
-.dropdown p {
-  width: 95%;
-}
-.dropdown input.inputField {
-  font-size: 12px;
 }
 .btn-create, .btn-create:hover {
   color: var(--white);
@@ -151,7 +118,6 @@ body {
   height: 24px;
   filter: invert(100%);
 }
-
 
 .footer {
   color: var(--white);
@@ -170,17 +136,12 @@ body {
 }
 
 @media (max-width: 992px) {
-  .menuList img {
-    width: 20px;
-    height: 20px;
-  }
-  .menu {
-    font-size: 12px;
-    font-weight: 400;
-  }
 }
 
 @media (max-width: 768px) {
+  .menuList img {
+    height: 20px;
+  }
   .main {
     min-height: 850px;
   }
@@ -190,12 +151,11 @@ body {
   .head h4 {
     font-size: 18px;
   }
-  .userCard .pic-profile {
-    width: 45%;
-    height: auto;
+  .headline img {
+    height: 18px;
   }
-  .btn-create, .btn-create:hover {
-    padding: 6px 12px !important;
+  .headline h6 {
+    font-size: 12px;
   }
   .btn-create h6 {
     font-size: 10px;
@@ -203,7 +163,6 @@ body {
   .btn-create img {
     width: auto;
     height: 18px;
-    filter: invert(100%);
   }
   .footer p {
     font-size: 10px;
