--- a/public/css/admin/dashboard.css
+++ b/public/css/admin/dashboard.css
@@ -20,6 +20,18 @@ body {
   padding: 0;
   margin: 0;
 }
+/* Popup */
+.popup-menu {
+  background-color: var(--white);
+  position: absolute;
+  left: 17.5%;
+  box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
+  border-radius: 6px;
+  z-index: 10;
+}
+.menuList a {
+  color: var(--black);
+}
 .img-logo {
   width: 110px;
 }
