--- a/public/css/admin/essay-completed-detail.css
+++ b/public/css/admin/essay-completed-detail.css
@@ -21,6 +21,18 @@ body {
   padding: 0;
   margin: 0;
 }
+/* Popup */
+.popup-menu {
+  background-color: var(--white);
+  position: absolute;
+  left: 17.5%;
+  box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
+  border-radius: 6px;
+  z-index: 10;
+}
+.menuList a {
+  color: var(--black);
+}
 .img-logo {
   width: 110px;
 }
@@ -50,9 +62,6 @@ body {
   width: auto;
   height: 25px;
 }
-.menuList a {
-  color: var(--black);
-}
 .menu {
   font-size: 14px;
   font-weight: 400;
@@ -69,16 +78,16 @@ body {
 .main-content {
   padding: 20px !important;
 }
-/* .profile {
+.profile {
   height: fit-content !important;
-} */
+}
 .userCard {
   color: var(--blue);
   /* min-height: 250px; */
   background-color: var(--white);
   border-radius: 6px;
   box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
-  /* cursor: pointer; */
+  height: fit-content !important;
 }
 .userCard * {
   /* padding: 0; */
@@ -147,34 +156,34 @@ img.img-word {
 .countEssay .checked {
   color: var(--yellow);
 }
-.essayList {
-  color: var(--blue);
-  /* min-height: 450px; */
-  background-color: var(--white);
-  border-radius: 6px;
-  box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
+.countEssay .tags {
+  background-color: rgba(214, 214, 214, 0.5);
+  border-radius: 10px;
 }
-.essayList * {
+.countEssay .list-tags {
+  width: fit-content !important;
+  height: fit-content !important;
+  align-self: center;
+}
+
+.student-desc .titik2 {
+  max-width: 18px;
+  /* text-align: center; */
+}
+.student-desc {
+  color: var(--black);  
+}
+.student-desc * {
   padding: 0;
   margin: 0;
 }
-.table thead {
-  background-color: #F9FAFC;
-  text-transform: uppercase;
+.profile-editor .student-desc h6 {
+  font-size: 14px;
+  font-weight: 600;
 }
-.table tr {
-  color: rgba(58, 53, 65, 0.87);
-  font-size: 11px;
-}
-.table tbody tr:hover {
-  background-color: rgba(234, 234, 234, 0.4);
-  cursor: pointer;
-}
-.table th,
-.table td {
-  padding: 14px 8px !important;
-  text-align: center;
-  vertical-align: middle;
+.profile-editor .student-desc p {
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .profile-editor {
@@ -208,6 +217,42 @@ img.img-word {
   filter: invert(100%);
 }
 
+.alert-complete {
+  background-color: var(--green);
+  color: var(--white);
+}
+.alert-complete img {
+  width: auto;
+  height: 22px;
+  filter: invert(100%);
+}
+.alert-complete .col img {
+  width: auto;
+  height: 18px;
+  filter: invert(100%);
+}
+.alert-complete h6 {
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.feedback h6 {
+  color: var(--black);
+  font-size: 12px;
+  font-weight: 500;
+}
+.feedback p {
+  color: var(--black);
+  font-size: 10px;
+  font-weight: 400;
+}
+.feedback .fa-star {
+  color: var(--light-grey);
+  font-size: 24px;
+}
+.feedback .checked {
+  color: var(--yellow);
+}
 
 .footer {
   color: var(--white);
@@ -234,6 +279,10 @@ img.img-word {
     font-size: 12px;
     font-weight: 400;
   }
+  .profile-editor .student-desc h6,
+  .profile-editor .student-desc p  {
+    font-size: 12px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -258,11 +307,27 @@ img.img-word {
     font-size: 10px;
     padding: 15px;
   }
+  .profile-editor .student-desc h6,
+  .profile-editor .student-desc p  {
+    font-size: 10px;
+  }
+  .student-desc .titik2 {
+    max-width: 8px;
+  }
   .countEssay h4 {
     font-size: 14px;
   }
   .essayList h6 {
     font-size: 12px;
+  }
+  .feedback h6 {
+    font-size: 10px;
+  }
+  .feedback p {
+    font-size: 8px;
+  }
+  .feedback .fa-star {
+    font-size: 20px;
   }
   /* Table */
   .table tr {
