--- a/public/css/admin/user-editor-invite.css
+++ b/public/css/admin/user-editor-invite.css
@@ -8,7 +8,9 @@ body {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), #2785DD;
   height: 100%;
 }
-
+* input {
+  box-shadow: none !important;
+}
 .main {
   height: 100%;
   margin: 0;
@@ -20,6 +22,18 @@ body {
 .sidenav * {
   padding: 0;
   margin: 0;
+}
+/* Popup */
+.popup-menu {
+  background-color: var(--white);
+  position: absolute;
+  left: 17.5%;
+  box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
+  border-radius: 6px;
+  z-index: 10;
+}
+.menuList a {
+  color: var(--black);
 }
 .img-logo {
   width: 110px;
@@ -49,9 +63,6 @@ body {
 .menuList img {
   width: auto;
   height: 25px;
-}
-.menuList a {
-  color: var(--black);
 }
 .menu {
   font-size: 14px;
