--- a/public/css/admin/user-student-detail.css
+++ b/public/css/admin/user-student-detail.css
@@ -21,6 +21,18 @@ body {
   padding: 0;
   margin: 0;
 }
+/* Popup */
+.popup-menu {
+  background-color: var(--white);
+  position: absolute;
+  left: 17.5%;
+  box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
+  border-radius: 6px;
+  z-index: 10;
+}
+.menuList a {
+  color: var(--black);
+}
 .img-logo {
   width: 110px;
 }
@@ -49,9 +61,6 @@ body {
 .menuList img {
   width: auto;
   height: 25px;
-}
-.menuList a {
-  color: var(--black);
 }
 .menu {
   font-size: 14px;
