--- a/public/css/admin/dashboard.css
+++ b/public/css/admin/dashboard.css
@@ -125,6 +125,18 @@ color: var(--blue);
   font-size: 18px;
   font-weight: 600;
 }
+
+.countUser-editor {
+  min-height: 85%;
+}
+.countUser-editor img {
+  width: 300px;
+  height: 300px;
+}
+.countUser-editor h4 {
+  font-size: 18px;
+  font-weight: 600;
+}
 .countEssay {
   min-height: 56%;
 }
@@ -211,6 +223,12 @@ color: var(--blue);
   .countUser img {
     height: 120px;
   }
+  .countUser-editor {
+    min-height: 60%;
+  }
+  .countUser-editor img {
+    height: 120px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -224,6 +242,9 @@ color: var(--blue);
     font-size: 18px;
   }
   .countUser img {
+    height: 140px;
+  }
+  .countUser-editor img {
     height: 140px;
   }
   .footer p {
