--- a/public/css/admin/export-student-essay.css
+++ b/public/css/admin/export-student-essay.css
@@ -86,7 +86,7 @@ body {
   box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
 }
 .studentList * {
-  padding: 0;
+  /* padding: 0; */
   margin: 0;
 }
 .headline {
@@ -222,6 +222,12 @@ body {
 }
 
 @media (max-width: 992px) {
+  /* Selectize */
+  .selectize-control,
+  .selectize-dropdown {
+    font-size: 10px !important;
+  }
+  /* End Selectize */
 }
 
 @media (max-width: 768px) {
