--- a/public/css/admin/user-editor-add.css
+++ b/public/css/admin/user-editor-add.css
@@ -148,6 +148,16 @@ body {
   filter: invert(100%);
 }
 
+/* Selectize */
+.selectize-control,
+.selectize-dropdown {
+  font-size: 13px !important;
+}
+.selectize-input.focus {
+  box-shadow: none !important;
+}
+/* End Selectize */
+
 .footer {
   color: var(--white);
   background: var(--blue);
@@ -204,6 +214,12 @@ body {
     font-size: 12px;
     font-weight: 400;
   }
+  /* Selectize */
+  .selectize-control,
+  .selectize-dropdown {
+    font-size: 10px !important;
+  }
+  /* End Selectize */
 }
 
 @media (max-width: 768px) {
