--- a/public/css/per-editor/utama.css
+++ b/public/css/per-editor/utama.css
@@ -6,7 +6,7 @@
 }
 body {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), #2785DD;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .user-icon{
