--- a/public/css/admin/setting-universities.css
+++ b/public/css/admin/setting-universities.css
@@ -104,6 +104,10 @@ body {
   height: 25px;
   filter: invert(100%);
 }
+.headline input.inputField {
+  font-size: 12px;
+  padding: 20px;
+}
 .table thead {
   background-color: #F9FAFC;
   text-transform: uppercase;
@@ -196,7 +200,10 @@ body {
   .headline img {
     height: 18px;
   }
-
+  .headline input.inputField {
+    font-size: 10px;
+    padding: 15px;
+  }
   /* Table */
   .table tr {
     font-size: 8px;
