--- a/public/css/admin/setting-add-essay-prompt.css
+++ b/public/css/admin/setting-add-essay-prompt.css
@@ -158,6 +158,15 @@ body {
   filter: invert(100%);
 }
 
+/* Selectize */
+.selectize-control {
+  font-size: 13px !important;
+}
+.selectize-input.focus {
+  box-shadow: none !important;
+}
+/* End Selectize */
+
 .footer {
   color: var(--white);
   background: var(--blue);
@@ -214,6 +223,13 @@ body {
     font-size: 12px;
     font-weight: 400;
   }
+
+  /* Selectize */
+  .selectize-control,
+  .selectize-dropdown {
+    font-size: 10px !important;
+  }
+  /* End Selectize */
 }
 
 @media (max-width: 768px) {
