--- a/public/css/per-editor/dashboard.css
+++ b/public/css/per-editor/dashboard.css
@@ -229,6 +229,9 @@ img.img-word {
     font-size: 10px !important;
   }
   /* End Selectize */
+  .field .inputField {
+    width: 100%;
+  }
 }
 
 @media (max-width: 768px) {
