--- a/public/css/per-editor/dashboard.css
+++ b/public/css/per-editor/dashboard.css
@@ -251,6 +251,10 @@ img.img-word {
     width: 45%;
     height: auto;
   }
+  .table th,
+  .table td {
+    font-size: 8px;
+  }
   .footer p {
     font-size: 10px;
   }
