--- a/public/css/mentor/new-request.css
+++ b/public/css/mentor/new-request.css
@@ -9,22 +9,13 @@ body {
   height: 100%;
 }
 
-
-.pointer{
-  padding: 0.1rem;
-  cursor: pointer;
-}
-
-.user-icon{
-color: var(--blue);
-}
-
 .main {
   height: 100%;
+  margin: 0;
 }
 .sidenav {
   background-color: var(--white);
-  border-right: 1px solid rgba(39, 133, 221, 0.1);  
+  border-right: 1px solid rgba(39, 133, 221, 0.1);
 }
 .sidenav * {
   padding: 0;
@@ -87,21 +78,25 @@ color: var(--blue);
 .main-content {
   padding: 20px !important;
 }
-.userCard {
+.studentList {
   color: var(--blue);
-  min-height: 225px;
+  min-height: 450px;
   background-color: var(--white);
   border-radius: 6px;
   box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
-  cursor: pointer;
 }
-.userCard * {
+.studentList * {
   padding: 0;
   margin: 0;
 }
+.studentList h6 {
+  color: var(--black);
+  font-size: 12px;
+  font-weight: 400;
+}
 .headline {
   color: var(--white);
-  padding: 24px !important;
+  padding: 20px 24px !important;
   background-color: var(--blue);
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
@@ -111,40 +106,32 @@ color: var(--blue);
 }
 .headline img {
   width: auto;
-  height: 28px;
+  height: 23px;
   filter: invert(100%);
 }
-.countUser {
-  min-height: 57%;
-}
-.countUser img {
-  width: 180px;
-  height: 150px;
-}
-.countUser h4 {
-  font-size: 18px;
-  font-weight: 600;
-}
-.countEssay {
-  min-height: 56%;
-}
-.countEssay img {
-  width: 180px;
-  height: 150px;
-}
-.countEssay h4 {
-  font-size: 18px;
-  font-weight: 600;
-}
-.userCard hr {
-  color: var(--grey);
-}
-.detailCard h6 {
-  font-size: 11px;
-  font-weight: 300;
-  color: var(--black);
+.headline input.inputField {
+  font-size: 12px;
+  padding: 20px;
 }
 
+.table thead {
+  background-color: #F9FAFC;
+  text-transform: uppercase;
+}
+.table tr {
+  color: rgba(58, 53, 65, 0.87);
+  font-size: 11px;
+}
+.table tbody tr:hover {
+  background-color: rgba(234, 234, 234, 0.4);
+  cursor: pointer;
+}
+.table th,
+.table td {
+  padding: 14px 8px !important;
+  text-align: center;
+  vertical-align: middle;
+}
 
 .footer {
   color: var(--white);
@@ -162,27 +149,68 @@ color: var(--blue);
   font-size: 12px;
 }
 
+/* Selectize */
+.selectize-control, input {
+  font-size: 13px !important;
+}
+.selectize-input.focus, input {
+  box-shadow: none !important;
+}
+/* End Selectize */
+
+.btn-create, .btn-create:hover {
+  color: var(--white);
+  background-color: var(--blue);
+  border: 0;
+  padding: 8px 16px !important;
+}
+.btn-create h6 {
+  color: var(--white) !important;
+}
+.btn-create img {
+  width: auto;
+  height: 24px;
+  filter: invert(100%);
+}
+
+/* Logout */
+.modal-dialog {
+  margin-top: 5px;
+}
+.modal-header {
+  background-color: var(--blue);
+  padding: 24px !important;
+}
+.modal-header img {
+  width: auto;
+  height: 22px;
+  filter: invert(100%);
+}
+.modal-header h6 {
+  color: var(--white);
+  font-size: 14px;
+  line-height: 14px;
+}
+.modal-body p, .modal-footer button {
+  font-size: 13px;
+  margin: 0;
+}
+.modal-footer button,
+.modal-footer button:hover {
+  background-color: var(--yellow);
+  color: var(--white);
+  padding: 10px 25px;
+  border: 0;
+  border-radius: 10px;
+}
+
 @media (max-width: 992px) {
-  .menuList img {
-    width: 20px;
-    height: 20px;
-  }
-  .menu {
-    font-size: 12px;
-    font-weight: 400;
-  }
-  .content h4 {
-    font-size: 16px;
-  }
-  .countUser {
-    min-height: 60%;
-  }
-  .countUser img {
-    height: 120px;
-  }
 }
 
 @media (max-width: 768px) {
+  .menuList img {
+    height: 20px;
+  }
   .main {
     min-height: 850px;
   }
@@ -192,9 +220,19 @@ color: var(--blue);
   .head h4 {
     font-size: 18px;
   }
-  .countUser img {
-    height: 140px;
+  .headline img {
+    height: 18px;
   }
+  .headline input.inputField {
+    font-size: 10px;
+    padding: 15px;
+  }
+
+  /* Table */
+  .table tr {
+    font-size: 8px;
+  }
+  
   .footer p {
     font-size: 10px;
   }
