--- a/public/css/admin/user-editor.css
+++ b/public/css/admin/user-editor.css
@@ -121,22 +121,18 @@ body {
 }
 
 .table thead {
-  background-color: #F9FAFC;
+  /* background-color: #F9FAFC; */
   text-transform: uppercase;
 }
 .table tr {
   color: rgba(58, 53, 65, 0.87);
-  font-size: 11px;
 }
 .table tbody tr:hover {
   background-color: rgba(234, 234, 234, 0.4);
   cursor: pointer;
 }
-.table th,
-.table td {
-  padding: 14px 8px !important;
-  text-align: center;
-  vertical-align: middle;
+.table {
+  font-size: 13px;
 }
 .table .status-editor {
   color: var(--white);
@@ -144,6 +140,32 @@ body {
   border-radius: 6px;
   background-color: var(--green);
   font-weight: 500;
+}
+.dataTables_wrapper {
+  color: var(--black);
+}
+.dataTables_wrapper .form-control:focus,
+.dataTables_wrapper .form-select:focus {
+  box-shadow: none;
+}
+.dataTables_wrapper .dataTables_length,
+.dataTables_wrapper .dataTables_filter,
+.dataTables_filter .form-control,
+.dataTables_wrapper .dataTables_info {
+  font-size: 13px;
+}
+.dataTables_wrapper .form-select {
+  width: 50% !important;
+  padding-left: 12px !important;
+}
+.dataTables_wrapper .page-item {
+  padding: 0 !important;
+  margin: 0 !important;
+  border: none !important;
+  background: none !important;
+}
+.dataTable tbody td {
+  padding: 14px 10px !important;
 }
 
 .footer {
@@ -223,8 +245,11 @@ body {
   }
 
   /* Table */
-  .table tr {
-    font-size: 8px;
+  .dataTables_wrapper .dataTables_length,
+  .dataTables_wrapper .dataTables_filter,
+  .dataTables_filter .form-control,
+  .dataTables_wrapper .dataTables_info {
+    font-size: 13px;
   }
   
   .footer p {
