--- a/public/css/per-editor/dashboard.css
+++ b/public/css/per-editor/dashboard.css
@@ -88,11 +88,38 @@
     background-color: rgba(234, 234, 234, 0.4);
     cursor: pointer;
 }
-.table th,
+/* .table th,
 .table td {
     padding: 14px 8px !important;
     text-align: center;
     vertical-align: middle;
+} */
+
+.dataTables_wrapper {
+    color: var(--black);
+}
+.dataTables_wrapper .form-control:focus,
+.dataTables_wrapper .form-select:focus {
+    box-shadow: none;
+}
+.dataTables_wrapper .dataTables_length,
+.dataTables_wrapper .dataTables_filter,
+.dataTables_filter .form-control,
+.dataTables_wrapper .dataTables_info {
+    font-size: 13px;
+}
+.dataTables_wrapper .form-select {
+    width: 50% !important;
+    padding-left: 12px !important;
+}
+.dataTables_wrapper .page-item {
+    padding: 0 !important;
+    margin: 0 !important;
+    border: none !important;
+    background: none !important;
+}
+.dataTable tbody td {
+    padding: 14px 10px !important;
 }
 img.img-status {
     width: auto;
@@ -257,6 +284,12 @@ img.img-word {
     .table th,
     .table td {
         font-size: 8px;
+    }
+    .dataTables_wrapper .dataTables_length,
+    .dataTables_wrapper .dataTables_filter,
+    .dataTables_filter .form-control,
+    .dataTables_wrapper .dataTables_info {
+        font-size: 13px;
     }
     .footer p {
         font-size: 10px;
