--- a/public/css/editor/dashboard.css
+++ b/public/css/editor/dashboard.css
@@ -153,11 +153,63 @@ color: var(--blue);
   color: var(--grey);
 }
 .detailCard h6 {
-  font-size: 12px;
+  font-size: 11px;
   font-weight: 300;
   color: var(--black);
 }
 
+.table thead {
+  /* background-color: #F9FAFC; */
+  text-transform: uppercase;
+}
+.table tr {
+  color: rgba(58, 53, 65, 0.87);
+}
+.table tbody tr:hover {
+  background-color: rgba(234, 234, 234, 0.4);
+  cursor: pointer;
+}
+.table {
+  font-size: 13px;
+}
+.table .status-editor {
+  color: var(--white);
+  padding: 6px 6px !important;
+  border-radius: 6px;
+  background-color: var(--green);
+  font-weight: 500;
+}
+.dataTables_wrapper {
+  color: var(--black);
+}
+.dataTables_wrapper .form-control:focus,
+.dataTables_wrapper .form-select:focus {
+  box-shadow: none;
+}
+.dataTables_wrapper .dataTables_length,
+.dataTables_wrapper .dataTables_filter,
+.dataTables_filter .form-control,
+.dataTables_wrapper .dataTables_info {
+  font-size: 13px;
+}
+.dataTables_wrapper .form-select {
+  width: 50% !important;
+  padding-left: 12px !important;
+}
+.dataTables_wrapper .page-item {
+  padding: 0 !important;
+  margin: 0 !important;
+  border: none !important;
+  background: none !important;
+}
+.dataTables_wrapper .page-item .page-link {
+  padding: 10px 15px;
+  margin: 0;
+  font-size: 13px;
+}
+.dataTable tbody td {
+  padding: 14px 10px !important;
+}
 
 .footer {
   color: var(--white);
@@ -219,5 +271,17 @@ color: var(--blue);
   }
   .footer p {
     font-size: 10px;
+  }
+  /* Table */
+  .table * {
+    font-size: 10px;
+  }
+  .dataTables_wrapper *,
+  .dataTables_info * {
+    font-size: 10px !important;
+  }
+  .dataTables_wrapper .page-item .page-link {
+    padding: 8px 10px;
+    margin: 0;
   }
 }
