--- a/public/css/editor/report-list-completed.css
+++ b/public/css/editor/report-list-completed.css
@@ -154,7 +154,7 @@ body {
   filter: invert(100%);
 }
 
-.table thead {
+/* .table thead {
   background-color: #F9FAFC;
   text-transform: uppercase;
 }
@@ -171,7 +171,7 @@ body {
   padding: 14px 8px !important;
   text-align: center;
   vertical-align: middle;
-}
+} */
 
 .footer {
   color: var(--white);
@@ -259,9 +259,9 @@ body {
   }
 
   /* Table */
-  .table tr {
+  /* .table tr {
     font-size: 8px;
-  }
+  } */
   
   .footer p {
     font-size: 10px;
