--- a/public/css/editor/user-editor-detail.css
+++ b/public/css/editor/user-editor-detail.css
@@ -223,23 +223,59 @@ img.rating.rating-fill {
   padding: 0;
   margin: 0;
 }
+
 .table thead {
-  background-color: #F9FAFC;
+  /* background-color: #F9FAFC; */
   text-transform: uppercase;
 }
 .table tr {
   color: rgba(58, 53, 65, 0.87);
-  font-size: 11px;
 }
 .table tbody tr:hover {
   background-color: rgba(234, 234, 234, 0.4);
   cursor: pointer;
 }
-.table th,
+/* .table th,
 .table td {
   padding: 14px 8px !important;
   text-align: center;
   vertical-align: middle;
+} */
+.table {
+  font-size: 13px;
+}
+.table .status-editor {
+  color: var(--white);
+  padding: 6px 6px !important;
+  border-radius: 6px;
+  background-color: var(--green);
+  font-weight: 500;
+}
+.dataTables_wrapper {
+  color: var(--black);
+}
+.dataTables_wrapper .form-control:focus,
+.dataTables_wrapper .form-select:focus {
+  box-shadow: none;
+}
+.dataTables_wrapper .dataTables_length,
+.dataTables_wrapper .dataTables_filter,
+.dataTables_filter .form-control,
+.dataTables_wrapper .dataTables_info {
+  font-size: 13px;
+}
+.dataTables_wrapper .form-select {
+  width: 50% !important;
+  padding-left: 12px !important;
+}
+.dataTables_wrapper .page-item {
+  padding: 0 !important;
+  margin: 0 !important;
+  border: none !important;
+  background: none !important;
+}
+.dataTable tbody td {
+  padding: 14px 10px !important;
 }
 
 .profile-editor {
@@ -411,5 +447,12 @@ img.rating.rating-fill {
   }
   .footer p {
     font-size: 10px;
+  }
+  /* Table */
+  .dataTables_wrapper .dataTables_length,
+  .dataTables_wrapper .dataTables_filter,
+  .dataTables_filter .form-control,
+  .dataTables_wrapper .dataTables_info {
+    font-size: 13px;
   }
 }
