--- a/public/css/mentor/dashboard.css
+++ b/public/css/mentor/dashboard.css
@@ -89,7 +89,7 @@ color: var(--blue);
 }
 .userCard {
   color: var(--blue);
-  min-height: 225px;
+  min-height: 250px; /*225px*/
   background-color: var(--white);
   border-radius: 6px;
   box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
